[project]
name = "hero-api"
version = "0.1.0"
description = "Hero API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "ruff>=0.12.3",
]
